--- a/notes.org
+++ b/notes.org
@@ -301,9 +301,10 @@ TODO:
 - [ ] Verify before creating a new player account (if that identity already has one)
 - [ ] Verification for submiting a new level
 - [ ] Verification run_level
-- [ ] Multi levels and programs
+- [ ] Multi levels and programs: currently use flipper contract for every level
 
 *** My hacklog
+
 
 **** 2021-02-06
 
@@ -352,8 +353,13 @@ $ canvas --dev --tmp -lerror,runtime=debug
 2021-02-06 13:23:06.015  DEBUG tokio-runtime-worker runtime:get method call failed: Decode(Error)    
 #+end_src
 
+I have wasted so much time only because I didn't pay attention to
+the two selectors and the different method return values.
+Cross contract call works finally after I corrected the selector.
 
-
+I add more prints for verification in the ~run_level~ method,
+and create run_level_0, run_level_1, and more levels.
+Each one uses the same flipper contract for testing.
 
 **** 2021-02-04
 
@@ -3311,6 +3317,7 @@ being able to work in the problem domain rather than at the low-level implementa
 
 *1.2  Procedures and the Processes They Generate*
 - A procedure is a pattern for the local evolution of a computational process. It specifies how each stage of the process is built upon the previous stage. We would like to be able to make statements about the overall, or global, behavior of a process whose local evolution has been specified by a procedure. This is very difficult to do in general, but we can at least try to describe some typical patterns of process evolution.
+
 
 *** Videos: MIT 6.001 Structure and Interpretation, 1986
 
