update game contract

--- a/notes.org
+++ b/notes.org
@@ -301,6 +301,115 @@ Captain game with Parity ink.
 
 *** My hacklog
 
+**** 2021-02-14
+
+Some differences between ink's doc and my terminal:
+
+[[https://paritytech.github.io/ink-docs/cargo-contract-cli][ink's doc]]:
+
+#+begin_src shell
+cargo-contract 0.8.0
+Utilities to develop Wasm smart contracts.
+
+USAGE:
+    cargo contract <SUBCOMMAND>
+
+OPTIONS:
+    -h, --help       Prints help information
+    -V, --version    Prints version information
+
+SUBCOMMANDS:
+    new                  Setup and create a new smart contract project
+    build                Compiles the contract, generates metadata, bundles both together in a '.contract' file
+    check                Check that the code builds as Wasm; does not output any build artifact to the top level `target/` directory
+    test                 Test the smart contract off-chain
+    deploy               Upload the smart contract code to the chain
+    instantiate          Instantiate a deployed smart contract
+    help                 Prints this message or the help of the given subcommand(s)
+#+end_src
+
+My terminal:
+
+#+begin_src shell
+$ cargo contract --version
+cargo-contract 0.8.0
+
+$ cargo contract --help
+cargo-contract 0.8.0
+Utilities to develop Wasm smart contracts
+
+USAGE:
+    cargo contract <SUBCOMMAND>
+
+OPTIONS:
+    -h, --help       Prints help information
+    -V, --version    Prints version information
+
+SUBCOMMANDS:
+    new                  Setup and create a new smart contract project
+    build                Compiles the contract, generates metadata, bundles both together in a `<name>.contract`
+                         file
+    generate-metadata    Command has been deprecated, use `cargo contract build` instead
+    check                Check that the code builds as Wasm; does not output any build artifact to the top level
+                         `target/` directory
+    test                 Test the smart contract off-chain
+    help                 Prints this message or the help of the given subcommand(s)
+
+$ cargo contract deploy
+error: Found argument 'deploy' which wasn't expected, or isn't valid in this context
+
+USAGE:
+    cargo contract <SUBCOMMAND>
+
+For more information try --help
+#+end_src
+
+While there isn't a ~upgrade~ or ~update~ command, I installed it again:
+
+#+begin_src shell
+$ cargo install cargo-contract --vers 0.8.0 --force --locked
+#+end_src
+
+But, ~cargo contract --help~ doesn't show me any differences.
+
+Gladly, I find something from GitHub:
+[[https://github.com/paritytech/cargo-contract][cargo-contract]]
+
+*[[https://github.com/paritytech/cargo-contract#features][Features]]*
+
+> The `deploy` and `instantiate` subcommands are **disabled by default**, since they are not fully stable yet and increase the build time.
+>
+> If you want to try them, you need to enable the `extrinsics` feature:
+>
+> `cargo install --git https://github.com/paritytech/cargo-contract cargo-contract --features extrinsics --force`
+>
+> Once they are stable and the compilation time is acceptable, we will consider removing the `extrinsics` feature.
+
+I am trying but it doesn't work: it's broken, and Brian has submitted a PR to fix it.
+
+#+begin_src shell
+$ cargo install --git https://github.com/paritytech/cargo-contract cargo-contract --features extrinsics --force
+
+...
+error: aborting due to 60 previous errors
+
+Some errors have detailed explanations: E0034, E0308.
+For more information about an error, try `rustc --explain E0034`.
+error: could not compile `bitvec`
+
+To learn more, run the command again with --verbose.
+warning: build failed, waiting for other jobs to finish...
+error: failed to compile `cargo-contract v0.8.0 (https://github.com/paritytech/cargo-contract#79dbcb65)`, intermediate artifacts can be found at `/var/folders/g5/hf7q78jn0vngnqtqj_3qfm6r0000gn/T/cargo-installBtwvjf`
+
+Caused by:
+  build failed
+#+end_src
+
+Changes in the smart contract:
+I add more verification in the run-highest-level logic that 
+prints congratulations and 
+*do not* level_up once the player's run_level_2 is succeeded.
+
 **** 2021-02-13
 
 Test with submit_level and run_level + level_up after run_level succeed:
@@ -322,7 +431,7 @@ Test with submit_level and run_level + level_up after run_level succeed:
 
 Now a player can submit (and run) programs up to 3 levels.
 
-I also add more ~Debugging~ log.
+I also add more ~Debugging~ log, and clean up the code.
 
 
 **** 2021-02-06
@@ -3256,7 +3365,8 @@ The videos' quality isn't great, and I give up.
 Then I move to another lecture: 
 [[https://www.youtube.com/watch?v=HtSuA80QTyo&list=PLUl4u3cNGP61Oq3tWYp6V_F-5jb5L2iHb&index=1][MIT 6.006 Introduction to Algorithms, Fall 2011]]
 
-
+More lectures on MIT website: 
+https://ocw.mit.edu/courses/find-by-topic/
 
 
 *** About types
