--- a/notes.org
+++ b/notes.org
@@ -3785,7 +3785,7 @@ they're probably a good enough choice to get started.
 
 > This pattern is about separating concerns: /main.rs/ handles running the program, and /lib.rs/ handles all the logic of the task at hand. 
 
-My code example: https://github.com/Aimeedeer/minigrep-rust-practice
+Code example: https://github.com/Aimeedeer/minigrep-rust-practice
 
 *** Copy and Clone in Rust
 
